--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1> Hellooooo </h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title> SAE203 </title>
+</head>
+<body>
+    <div class="container">
+        <input class="input" id="searchInput" type="text" placeholder="Search..."/>
+        <div id="suggestions"></div>
+    </div>
     
-    <p> T une fraude </p>
-  </body>
+    <script src="code.js"></script>
+    
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
+</body>
 </html>
